default/objects/RM_Chart_Setting__c/RM_Chart_Setting__c.object-meta.xml
<CustomObject>
    <label>RM Chart Setting</label>
    <nameField>
        <displayFormat>RM-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Relationship Map Individual Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Chart Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>