default/objects/RM_Chart_Setting__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>RM Chart Settings</relationshipLabel>
    <relationshipName>RM_Chart_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>