default/objects/RM_Chart_Setting__c/fields/Card_Style__c.field-meta.xml
<CustomField>
    <fullName>Card_Style__c</fullName>
    <inlineHelpText>Select the detail level of the card.</inlineHelpText>
    <label>Card Style</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Compact</fullName>
            </value>
            <value>
                <fullName>FixedSize</fullName>
                <default>true</default>
                <label>FixedSize</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>