default/objects/RM_Chart_Setting__c/fields/Display_Style__c.field-meta.xml
<CustomField>
    <fullName>Display_Style__c</fullName>
    <inlineHelpText>Select the chart display styles.  For charts that are wide, choose last parents arranging children vertically.</inlineHelpText>
    <label>Main Map Display Style</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Horizontal</fullName>
                <default>true</default>
                <label>Horizontal</label>
            </value>
            <value>
                <fullName>Leaf_Vertical</fullName>
                <label>Vertical</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>