default/objects/RM_Chart_Setting__c/fields/Is_Badge_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Badge_Global_Scope__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When this is check, badges on contacts will persist wherever the contact is on the maps.  If unchecked, the badge will only be present for that particular map</description>
    <inlineHelpText>When this is check, badges on contacts will persist wherever the contact is on the maps.  If unchecked, the badge will only be present for that particular map</inlineHelpText>
    <label>Use Global Badges</label>
    <type>Checkbox</type>
</CustomField>