default/objects/RM_Chart_Setting__c/fields/Is_Influence_Support_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Influence_Support_Global_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Global Influence and Support Values</label>
    <type>Checkbox</type>
</CustomField>