default/objects/RM_Chart_Setting__c/fields/Is_Relationship_Line_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Relationship_Line_Global_Scope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this to use Global Relationship Lines.  Leave this unchecked to create and use lines that are visible only in this Relationship Map</description>
    <inlineHelpText>Check this to use Global Relationship Lines.  Leave this unchecked to create and use lines that are visible only in this Relationship Map</inlineHelpText>
    <label>Use Global Relationship Lines</label>
    <type>Checkbox</type>
</CustomField>