default/objects/RM_Chart_Setting__c/fields/Is_Reports_To_Global_Scope__c.field-meta.xml
<CustomField>
    <fullName>Is_Reports_To_Global_Scope__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this option to use the Salesforce &apos;Reports To&apos; field.  Uncheck this and this relationship map will maintain this data locally to the chart.</description>
    <inlineHelpText>Check this option to use the Salesforce &apos;Reports To&apos; field.  Uncheck this and this relationship map will maintain this data locally to the chart.</inlineHelpText>
    <label>Use Global Reports To Field</label>
    <type>Checkbox</type>
</CustomField>