default/objects/RM_Chart_Setting__c/fields/Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Read_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This read-only field restricts any modifications or updates to the chart, effectively freezing it in its current state.</description>
    <inlineHelpText>This read-only field restricts any modifications or updates to the chart, effectively freezing it in its current state.</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>