default/objects/RM_Chart_Setting__c/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>Relationship_Map__c</referenceTo>
    <relationshipLabel>RM Chart Settings</relationshipLabel>
    <relationshipName>RM_Chart_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>