default/objects/RM_Chart_Setting__c/fields/Reports_To_Line_Opacity__c.field-meta.xml
<CustomField>
    <fullName>Reports_To_Line_Opacity__c</fullName>
    <description>The opacity of the Contact &apos;Reports To&apos; hierarchy lines.  Set a percentage value between 0% to make the lines hidden and 100% for full visibility.</description>
    <inlineHelpText>The opacity of the Contact &apos;Reports To&apos; hierarchy lines.  Set a percentage value between 0% to make the lines hidden and 100% for full visibility.</inlineHelpText>
    <label>Reports To Line Opacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>