default/objects/RM_Chart_Setting__c/fields/Show_Parents__c.field-meta.xml
<CustomField>
    <fullName>Show_Parents__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check this to include a node&apos;s parent node (if they have a parent)</description>
    <inlineHelpText>Check this to include a node&apos;s parent node (if they have a parent)</inlineHelpText>
    <label>Show Parents</label>
    <type>Checkbox</type>
</CustomField>